log
vi., 11 de mar. de 2022 18:20:23: 
 tests:  0|7
total_score: 0/70
327991c
vi., 11 de mar. de 2022 19:14:36: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
ce86568
vi., 11 de mar. de 2022 20:05:19: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
75701fb
vi., 11 de mar. de 2022 20:07:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
815cff5
vi., 11 de mar. de 2022 20:18:30: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
ccae973
vi., 11 de mar. de 2022 20:36:06: 
 exercises.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  2|5
total_score: 20/70
8fc1364
vi., 11 de mar. de 2022 21:57:40: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
568aa99
vi., 11 de mar. de 2022 22:11:15: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
4b7ff00
sá., 12 de mar. de 2022 17:51:30: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:85:22: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    totaldat -> datos = (int) calloc (n, sizeof(int));
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
76f1ad7
sá., 12 de mar. de 2022 17:52:06: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
081a743
sá., 12 de mar. de 2022 17:54:19: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
bba0641
do., 13 de mar. de 2022 13:39:28: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
bcb5c95
do., 13 de mar. de 2022 13:51:54: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
58fa392
do., 13 de mar. de 2022 13:59:13: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 60/70
03fa264
do., 13 de mar. de 2022 15:10:28: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|0
total_score: 70/70
3fd75f8
